# VuR

./: .gitignore  .gitmodules  CMakeLists - cglm.txt  CMakeLists.txt  Doxyfile  Makefile  README.md  VuR  vulkan-example.c
.cache/clangd/index/: affine-mat.h.E520F4C704814ADA.idx  affine.c.55B8834A14E34D23.idx  affine.h.28554674212CAF56.idx  affine.h.7D85FC6A3372D6AB.idx  affine.h.E914265195DEE1E6.idx  affine2d.c.E01EC7B9B6F4F009.idx  affine2d.h.0F1E273AB7A0D484.idx  affine2d.h.93FF76CB1EAB0E4C.idx  bezier.c.50B5F763B2F36B98.idx  bezier.h.62FF93363B73E915.idx  bezier.h.6AE6E25025F9AB45.idx  box.c.D4562D079FFCE9BC.idx  box.h.7ED918C522760696.idx  box.h.8691C7C4967D4390.idx  call.h.30C4241741E8B540.idx  cam.c.25113F6D864861F6.idx  cam.h.90DB759708AB954F.idx  cam.h.9554742024FCA814.idx  cglm.h.9B95D846815B59D9.idx  color.h.703293985093C242.idx  common.h.9BC40DB6BE9E24EE.idx  context.c.E974F33BC52606B4.idx  curve.c.50171B155E08F180.idx  curve.h.93DD2C4FA198E28B.idx  curve.h.A65F75651432A539.idx  ease.c.03718917BE98F7A3.idx  ease.h.8A106AB0DD13067C.idx  ease.h.B7D1F2DD89D9BF10.idx  egl_context.c.3C7235F3991CBC59.idx  egl_context.h.FC74AA5A963A4F3C.idx  euler.c.D7B725F8EE27C60A.idx  euler.h.45F9D3C35D011EBE.idx  euler.h.D1E9FFAA55863494.idx  frustum.c.9A42270573B35A90.idx  frustum.h.2FC676691DF8EC92.idx  frustum.h.55AA1883B964A3CE.idx  glfw3.h.7E1390F4130B9501.idx  glx_context.c.E520DFE0D7A085BE.idx  (+115 more)
app/: CMakeLists.txt  main.c
shaders/: shader.vert  shader.vert.spv
src/: CMakeLists.txt  internal.h  main.c  renderer.c  renderer.h  vk_util.c  vk_util.h
tests/: testVuR.c
